# DiscordBot

./: Cargo.toml  README.md
memo/: Future, Send 에러.md  YoutubeDl 분석.md  게임 보드.md  고쳐야 할 곳.md  동시성.md  디스코드 API 에러.md  소유권, 수명.md  음성 관련 변경점.md  음성 관련.md
src/: connection_handler.rs  global.rs  main.rs
src/command_handler/: command_handler.rs  command_return.rs  mod.rs
src/command_handler/commands/: connect.rs  disconnect.rs  launch.rs  mod.rs  play.rs  play_list.rs  register_channel.rs
src/event_handler/: event_handler.rs  mod.rs  track_event_handler.rs
src/utils/: board.rs  guild_queue.rs  mod.rs  youtube_dl.rs
