[package]
name = "quiz_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = "0.11.0"
ctrlc = "3.4.4"
tokio = { version = "1.37.0", features = ["full"] }
serenity = { version = "0.12.1", features = ["full"] }
poise = "0.6.1"
songbird = "0.4.1"
rand = "0.8.5"
regex = "1.10.4"
symphonia = "0.5.4"
serde = "1.0.201"
serde_json = "1.0.117"
dashmap = "5.5.3"
parking_lot = "0.12.2"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"